[gd_scene load_steps=3 format=3 uid="uid://blg5hjuk1rgh1"]

[ext_resource type="Script" path="res://Scripts/scenes scripts/ac_dice_custom_scene.gd" id="1_du1e6"]
[ext_resource type="Texture2D" uid="uid://bq8cqauqjpo0q" path="res://Assets/dice-to-pick.png" id="2_5k4ab"]

[node name="AcDiceCustomScene" type="Node2D"]
script = ExtResource("1_du1e6")

[node name="Label" type="Label" parent="."]
offset_left = 470.0
offset_top = 29.0
offset_right = 1427.0
offset_bottom = 139.0
theme_override_font_sizes/font_size = 80
text = "Choose from 2 act types"

[node name="Label2" type="Label" parent="."]
offset_left = 674.0
offset_top = 299.0
offset_right = 867.0
offset_bottom = 412.0
theme_override_font_sizes/font_size = 40
text = "Common
     Acts"

[node name="Label3" type="Label" parent="."]
offset_left = 980.0
offset_top = 301.0
offset_right = 1217.0
offset_bottom = 414.0
theme_override_font_sizes/font_size = 40
text = "Uncommon
        Acts"

[node name="Button" type="Button" parent="."]
offset_left = 879.0
offset_top = 719.0
offset_right = 1000.0
offset_bottom = 782.0
theme_override_font_sizes/font_size = 40
text = "Back"

[node name="Common Acts" type="TextureButton" parent="."]
offset_left = 712.0
offset_top = 438.0
offset_right = 824.0
offset_bottom = 550.0
texture_normal = ExtResource("2_5k4ab")
stretch_mode = 0

[node name="Uncommon Acts" type="TextureButton" parent="."]
offset_left = 1046.0
offset_top = 438.0
offset_right = 1158.0
offset_bottom = 550.0
texture_normal = ExtResource("2_5k4ab")
stretch_mode = 0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Common Acts" to="." method="_on_common_acts_pressed"]
[connection signal="pressed" from="Uncommon Acts" to="." method="_on_uncommon_acts_pressed"]
